@@ -4,6 +4,7 @@ import com.baomidou.mybatisplus.annotation.DbType;
 import com.baomidou.mybatisplus.extension.plugins.MybatisPlusInterceptor;
 import com.baomidou.mybatisplus.extension.plugins.inner.PaginationInnerInterceptor;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -17,7 +18,7 @@ public class DefaultInterceptor implements Interceptor {
     @Override
     public org.apache.ibatis.plugin.Interceptor[] resolveInterceptor() {
         MybatisPlusInterceptor mybatisPlusInterceptor = new MybatisPlusInterceptor();
-        mybatisPlusInterceptor.setInterceptors(List.of(new PaginationInnerInterceptor(DbType.MYSQL)));
+        mybatisPlusInterceptor.setInterceptors(Arrays.asList(new PaginationInnerInterceptor(DbType.MYSQL)));
         return new org.apache.ibatis.plugin.Interceptor[]{mybatisPlusInterceptor};
     }
 }
